rwf-bin/src/ui/dialog/snapshot_tests/snapshots/rwf__ui__dialog__snapshot_tests__create_link_two_kinds_default_120x40.snap
---
source: rwf-bin/src/ui/dialog/snapshot_tests/mod.rs
expression: "render_dialog_to_string(dialog, state, width, height)"
---
Buffer {
    area: Rect { x: 0, y: 0, width: 120, height: 40 },
    content: [
        "                                                                                                                        ",
        "                                                                                                                        ",
        "                                                                                                                        ",
        "                                                                                                                        ",
        "                                                                                                                        ",
        "                                                                                                                        ",
        "                                                                                                                        ",
        "                                                                                                                        ",
        "                                                                                                                        ",
        "                                                                                                                        ",
        "                                                                                                                        ",
        "                                                                                                                        ",
        "                                                                                                                        ",
        "                                                                                                                        ",
        "                      ┌Create Link───────────────────────────────────────────────────────────────┐                      ",
        "                      │  Type:  (*) Symlink   ( ) Hardlink                                       │                      ",
        "                      │  ✗ Hardlink: different drive                                             │                      ",
        "                      │                                                                          │                      ",
        "                      │  Link name:                                                              │                      ",
        "                      │  /test/dest                                                              │                      ",
        "                      │  report.docx                                                             │                      ",
        "                      │                                                                          │                      ",
        "                      │  Target (what it points to):                                             │                      ",
        "                      │  /test/report.docx  (file)                                               │                      ",
        "                      │                             [*OK*]  [Cancel]                             │                      ",
        "                      └──────────────────────────────────────────────────────────────────────────┘                      ",
        "                                                                                                                        ",
        "                                                                                                                        ",
        "                                                                                                                        ",
        "                                                                                                                        ",
        "                                                                                                                        ",
        "                                                                                                                        ",
        "                                                                                                                        ",
        "                                                                                                                        ",
        "                                                                                                                        ",
        "                                                                                                                        ",
        "                                                                                                                        ",
        "                                                                                                                        ",
        "                                                                                                                        ",
        "                                                                                                                        ",
    ],
    styles: [
        x: 0, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 22, y: 14, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 23, y: 14, fg: Black, bg: Gray, underline: Reset, modifier: BOLD,
        x: 34, y: 14, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 98, y: 14, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 22, y: 15, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 23, y: 15, fg: Reset, bg: Gray, underline: Reset, modifier: NONE,
        x: 25, y: 15, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 32, y: 15, fg: Black, bg: White, underline: Reset, modifier: NONE,
        x: 46, y: 15, fg: DarkGray, bg: Gray, underline: Reset, modifier: NONE,
        x: 61, y: 15, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 95, y: 15, fg: Reset, bg: Gray, underline: Reset, modifier: NONE,
        x: 97, y: 15, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 98, y: 15, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 22, y: 16, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 23, y: 16, fg: Reset, bg: Gray, underline: Reset, modifier: NONE,
        x: 25, y: 16, fg: DarkGray, bg: Gray, underline: Reset, modifier: NONE,
        x: 95, y: 16, fg: Reset, bg: Gray, underline: Reset, modifier: NONE,
        x: 97, y: 16, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 98, y: 16, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 22, y: 17, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 23, y: 17, fg: Reset, bg: Gray, underline: Reset, modifier: NONE,
        x: 97, y: 17, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 98, y: 17, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 22, y: 18, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 23, y: 18, fg: Reset, bg: Gray, underline: Reset, modifier: NONE,
        x: 25, y: 18, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 95, y: 18, fg: Reset, bg: Gray, underline: Reset, modifier: NONE,
        x: 97, y: 18, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 98, y: 18, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 22, y: 19, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 23, y: 19, fg: Reset, bg: Gray, underline: Reset, modifier: NONE,
        x: 25, y: 19, fg: DarkGray, bg: Gray, underline: Reset, modifier: NONE,
        x: 95, y: 19, fg: Reset, bg: Gray, underline: Reset, modifier: NONE,
        x: 97, y: 19, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 98, y: 19, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 22, y: 20, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 23, y: 20, fg: Reset, bg: Gray, underline: Reset, modifier: NONE,
        x: 25, y: 20, fg: DarkGray, bg: Gray, underline: Reset, modifier: NONE,
        x: 95, y: 20, fg: Reset, bg: Gray, underline: Reset, modifier: NONE,
        x: 97, y: 20, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 98, y: 20, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 22, y: 21, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 23, y: 21, fg: Reset, bg: Gray, underline: Reset, modifier: NONE,
        x: 97, y: 21, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 98, y: 21, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 22, y: 22, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 23, y: 22, fg: Reset, bg: Gray, underline: Reset, modifier: NONE,
        x: 25, y: 22, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 95, y: 22, fg: Reset, bg: Gray, underline: Reset, modifier: NONE,
        x: 97, y: 22, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 98, y: 22, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 22, y: 23, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 23, y: 23, fg: Reset, bg: Gray, underline: Reset, modifier: NONE,
        x: 25, y: 23, fg: DarkGray, bg: Gray, underline: Reset, modifier: NONE,
        x: 95, y: 23, fg: Reset, bg: Gray, underline: Reset, modifier: NONE,
        x: 97, y: 23, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 98, y: 23, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 22, y: 24, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 98, y: 24, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 22, y: 25, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 98, y: 25, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
    ]
}
